--- a/.gitignore
+++ b/.gitignore
@@ -13,5 +13,8 @@ config/local.py
 .env
 deploy/*.service
 .scannerwork
-venv
-media
+/venv
+/media
+*.env
+candidate/migrations/0002_profile_slug_alter_profile_experience_and_more.py
+
