--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,10 @@ django-allauth==0.54.0
 django-autoslug==1.9.9
 django-countries==7.5.1
 django-crispy-forms==2.0
+django-environ==0.10.0
 idna==3.4
 oauthlib==3.2.2
+psycopg2-binary==2.9.6
 pycparser==2.21
 PyJWT==2.7.0
 python3-openid==3.2.0
