--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ cryptography==41.0.1
 defusedxml==0.7.1
 Django==4.2.2
 django-allauth==0.54.0
+django-autocomplete-light==3.9.7
 django-autoslug==1.9.9
 django-countries==7.5.1
 django-crispy-forms==2.0
@@ -19,6 +20,7 @@ PyJWT==2.7.0
 python3-openid==3.2.0
 requests==2.31.0
 requests-oauthlib==1.3.1
+six==1.16.0
 sqlparse==0.4.4
 typing_extensions==4.6.3
 urllib3==2.0.3
